java 17 fixes